fix(tag): add visible keyboard focus for all tags

--- a/packages/components/src/tag/Tag.module.css
+++ b/packages/components/src/tag/Tag.module.css
@@ -70,10 +70,12 @@
     outline: none;
   }
 
-  &.dismissable {
-    &[data-focus-visible] {
+  &[data-focus-visible] {
+    box-shadow: var(--midas-state-focus);
+
+    @media (forced-colors: active) {
+      outline: 3px solid highlight;
       outline-offset: 2px;
-      outline: 2px solid black;
     }
   }
 }
